# onevoice_meet

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  add_banner_and_subtitles.py  add_banner_to_video.py  docker-compose.yml  encode_bens_call.py
caddy/: Caddyfile  README.md
compositor/: Dockerfile  README.md  entrypoint.sh  package.json  server.js
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  FEATURES.md  SECURITY.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
livekit/: README.md  livekit.yaml  livekit.yaml.tpl
meeting-api/: Dockerfile  README.md  pyproject.toml  requirements.txt
meeting-api/app/: auth.py  config.py  db.py  livekit_client.py  logging_config.py  main.py  models.py  scheduler.py  webhooks.py
meeting-api/app/routes/: admin.py  auth_native.py  billing.py  chat.py  health.py  meetings.py  moderation.py  playback.py  polls.py  recordings.py  streams.py  ti_cafe.py  tokens.py  totp.py  users.py  vouchers.py  waiting_room.py  youtube_oauth.py
meeting-api/app/services/: egress_mgr.py  email.py  email_templates.py  ics.py  intrusion_detector.py  ip_block.py  paypal.py  playback_mgr.py  rate_limit.py  slug_words.py  transcription.py  vouchers.py  whats_next_slide.py  youtube.py  youtube_live.py
meeting-api/tests/: conftest.py  test_health.py
one-witysk-integration/: README.md  caddyfile-snippet.md  sso-bootstrap.html
scripts/: build_design_doc.py  deploy.sh  translate_locales.py  (+2 more)
(+152 files in other folders)
